[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UIelements/number_edit.gd" type="Script" id=1]

[node name="NumberEdit" type="LineEdit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -11.5
margin_right = 30.0
margin_bottom = 12.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_NumberEdit_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_NumberEdit_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_NumberEdit_text_changed"]
